[metadata]
name = tornado_rest_client
version = attr: tornado_rest_client.version.__version__
url = https://github.com/Nextdoor/tornado_rest_client
download_url= http://pypi.python.org/pypi/tornado_rest_client#downloads
author = Nextdoor Engineering
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development
license = Apache License, Version 2.0
description = Tornado REST client
long_description = file: README.rst
keywords = tornado, rest, tornado_rest_client

[options]
install_requires = file: requirements.txt
python_requires = ~=3.7
tests_require = file: requirements.test.txt
packages = find:
